--- a/featured.html
+++ b/featured.html
@@ -6,187 +6,63 @@
 <title>KhanceptDesigns – Featured Products</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 <style>
-/* Body & General */
-body {
-  margin: 0;
-  font-family: "Poppins", sans-serif;
-  background: #f0f0f0;
-  color: #222;
-}
-
-/* Header (same as home page) */
-header {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 180px;
-  background: linear-gradient(135deg, #111 0%, #222 100%);
-  color: white;
-  text-align: center;
-  padding: 0 20px;
-}
-
-header h1 {
-  font-size: 3.2rem;
-  font-weight: 800;
-  margin: 0;
-  letter-spacing: 1px;
-  text-shadow: 1px 1px 4px rgba(0,0,0,0.4);
-}
-
-header p {
-  margin-top: 8px;
-  font-size: 1.2rem;
-  font-weight: 400;
-  color: #ccc;
-  letter-spacing: 0.5px;
-  opacity: 0.9;
-}
-
-/* Responsive Header */
-@media (max-width: 768px) {
-  header { height: 140px; }
-  header h1 { font-size: 2.2rem; }
-  header p { font-size: 1rem; }
-}
-
-@media (max-width: 480px) {
-  header { height: 120px; }
-  header h1 { font-size: 1.8rem; }
-  header p { font-size: 0.9rem; }
-}
-
-/* Navigation */
-nav {
-  background: #000;
-  padding: 15px 0;
-  text-align: center;
-}
-nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-nav ul li {
-  display: inline-block;
-  margin: 0 20px;
-}
-nav ul li a {
-  color: white;
-  text-decoration: none;
-  font-weight: 600;
-  font-size: 1.1rem;
-  transition: 0.3s;
-}
-nav ul li a:hover { color: #aaa; }
-nav ul li a.active { color: #1E90FF; font-weight: 700; }
-
-/* Container */
-.container {
-  width: 90%;
-  max-width: 1200px;
-  margin: 50px auto;
-}
-.section-title {
-  font-size: 2.4rem;
-  text-align: center;
-  margin-bottom: 40px;
-  font-weight: 700;
-}
-
-/* Search */
-.search-container {
-  width: 100%;
-  max-width: 500px;
-  margin: 0 auto 40px auto;
-}
-#searchBar {
-  width: 100%;
-  padding: 14px 18px;
-  font-size: 1rem;
-  border-radius: 12px;
-  border: 2px solid #ccc;
-  outline: none;
-  transition: 0.3s;
-}
-#searchBar:focus { border-color: #000; box-shadow: 0 0 10px rgba(0,0,0,0.15); }
-
-/* Product Grid */
-.product-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-  gap: 35px;
-}
-.product-card {
-  background: rgba(255, 255, 255, 0.65);
-  backdrop-filter: blur(12px);
-  border-radius: 20px;
-  overflow: hidden;
-  box-shadow: 0 8px 26px rgba(0,0,0,0.15);
-  transition: transform 0.35s ease, box-shadow 0.35s ease;
-}
-.product-card.highlight { box-shadow: 0 0 25px 6px #1E90FF; transition: box-shadow 0.5s ease; }
-.product-card:hover { transform: translateY(-10px); box-shadow: 0 15px 35px rgba(0,0,0,0.25); }
-.product-card img { width: 100%; height: 260px; object-fit: contain; background: #f5f5f5; }
-.product-info { padding: 20px; }
-.product-info h3 { margin: 0; font-size: 1.3rem; font-weight: 600; }
-.product-info p { margin-top: 8px; font-size: 0.95rem; opacity: 0.85; }
-.product-info a {
-  display: inline-block;
-  margin-top: 14px;
-  padding: 12px 20px;
-  background: linear-gradient(135deg, #000 0%, #444 100%);
-  color: white;
-  text-decoration: none;
-  font-weight: 600;
-  border-radius: 10px;
-  transition: 0.3s;
-}
-.product-info a:hover { transform: translateY(-3px); background: linear-gradient(135deg, #444 0%, #000 100%); }
-
-/* Footer */
-footer {
-  text-align: center;
-  padding: 25px;
-  margin-top: 50px;
-  background: #111;
-  color: white;
-}
+body{margin:0;font-family:"Poppins",sans-serif;background:#f0f0f0;color:#222;}
+header{padding:60px 20px;text-align:center;background:linear-gradient(135deg,#111 0%,#222 100%);color:white;}
+header h1{font-size:3.2rem;margin:0;font-weight:800;letter-spacing:1px;}
+header p{margin-top:8px;font-size:1.2rem;opacity:0.85;}
+nav{background:#000;padding:15px 0;text-align:center;}
+nav ul{list-style:none;margin:0;padding:0;}
+nav ul li{display:inline-block;margin:0 20px;}
+nav ul li a{color:white;text-decoration:none;font-weight:600;font-size:1.1rem;transition:0.3s;}
+nav ul li a:hover{color:#aaa;}
+nav ul li a.active{color:#1E90FF;font-weight:700;}
+.container{width:90%;max-width:1200px;margin:50px auto;}
+.section-title{font-size:2.4rem;text-align:center;margin-bottom:40px;font-weight:700;}
+.search-container{width:100%;max-width:500px;margin:0 auto 40px auto;}
+#searchBar{width:100%;padding:14px 18px;font-size:1rem;border-radius:12px;border:2px solid #ccc;outline:none;}
+#searchBar:focus{border-color:#000;box-shadow:0 0 10px rgba(0,0,0,0.15);}
+.product-grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(280px,1fr));gap:35px;}
+.product-card{background:rgba(255,255,255,0.65);backdrop-filter:blur(12px);border-radius:20px;overflow:hidden;box-shadow:0 8px 26px rgba(0,0,0,0.15);transition: transform 0.35s ease, box-shadow 0.35s ease;}
+.product-card.highlight{box-shadow:0 0 25px 6px #1E90FF;transition:box-shadow 0.5s ease;}
+.product-card:hover{transform:translateY(-10px);box-shadow:0 15px 35px rgba(0,0,0,0.25);}
+.product-card img{width:100%;height:260px;object-fit:contain;background:#f5f5f5;}
+.product-info{padding:20px;}
+.product-info h3{margin:0;font-size:1.3rem;font-weight:600;}
+.product-info p{margin-top:8px;font-size:0.95rem;opacity:0.85;}
+.product-info a{display:inline-block;margin-top:14px;padding:12px 20px;background:linear-gradient(135deg,#000 0%,#444 100%);color:white;text-decoration:none;font-weight:600;border-radius:10px;transition:0.3s;}
+.product-info a:hover{transform:translateY(-3px);background:linear-gradient(135deg,#444 0%,#000 100%);}
+footer{text-align:center;padding:25px;margin-top:50px;background:#111;color:white;}
 </style>
 </head>
 <body>
 
 <header>
-  <h1>KhanceptDesigns</h1>
-  <p>Product Promotion & Showcase</p>
+<h1>KhanceptDesigns</h1>
+<p>Featured Products</p>
 </header>
 
 <nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="featured.html" class="active">Featured</a></li>
-    <li><a href="sale.html">Sale</a></li>
-    <li><a href="#contact">Contact</a></li>
-  </ul>
+<ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="featured.html" class="active">Featured</a></li>
+<li><a href="sale.html">Sale</a></li>
+<li><a href="#contact">Contact</a></li>
+</ul>
 </nav>
 
 <div class="container">
-  <h2 class="section-title">Featured Products</h2>
-
-  <div class="search-container">
-    <input type="text" id="searchBar" placeholder="Search products...">
-  </div>
-
-  <div class="product-grid" id="homeProductGrid"></div>
+<h2 class="section-title">Featured Products</h2>
+<div class="search-container">
+<input type="text" id="searchBar" placeholder="Search products...">
+</div>
+<div class="product-grid" id="homeProductGrid"></div>
 </div>
 
 <footer>
-  © 2025 KhanceptDesigns – All Rights Reserved
+© 2025 KhanceptDesigns – All Rights Reserved
 </footer>
 
 <script>
-// GitHub Config
 const GITHUB_USERNAME = "KhanceptDesigns";
 const REPO_NAME = "Khanceptdesign";
 const FILE_PATH = "products.json";
@@ -194,76 +70,70 @@ const FILE_PATH = "products.json";
 const homeGrid = document.getElementById("homeProductGrid");
 let allProducts = [];
 
-// Load products from GitHub
-async function loadProducts() {
-  try {
+async function loadProducts(){
+  try{
     const res = await fetch(`https://raw.githubusercontent.com/${GITHUB_USERNAME}/${REPO_NAME}/main/${FILE_PATH}`);
-    if(!res.ok) throw new Error("Failed to load products from GitHub");
-    return await res.json();
-  } catch(err) {
-    console.error(err);
-    homeGrid.innerHTML = `<p style="text-align:center; padding:50px;">Error loading products.</p>`;
-    return [];
-  }
+    if(!res.ok) throw new Error("Failed to load products");
+    allProducts = await res.json();
+    displayProducts(allProducts);
+    scrollToProductFromURL();
+  }catch(err){ console.error(err); }
 }
 
-// Display products
-function displayProducts(grid, products){
-  if(products.length === 0){
-    grid.innerHTML = `<p style="text-align:center; font-size:1.2rem; padding:50px;">No products available.</p>`;
-  } else {
-    grid.innerHTML = products.map((prod, index) => `
-      <div class="product-card" id="product-${index}">
-        <img src="${prod.img}" alt="${prod.name}" onerror="this.src='images/fallback.png'"/>
-        <div class="product-info">
-          <h3>${prod.name}</h3>
-          <p>${prod.desc}</p>
-          <p style="font-size:1.1rem; margin-top:10px;">
-            ${prod.oldPrice ? `<span style="text-decoration: line-through; color:#777;">$${prod.oldPrice}</span>` : ""}
-            <span style="color:#d40000; font-weight:700; margin-left:${prod.oldPrice ? "10px" : "0"};">$${prod.salePrice}</span>
-          </p>
-          <a href="${prod.link}" target="_blank">Buy Now</a>
-        </div>
+function displayProducts(products){
+  if(!products.length){
+    homeGrid.innerHTML="<p style='text-align:center;padding:50px;'>No products available.</p>";
+    return;
+  }
+  homeGrid.innerHTML = products.map((prod,index)=>`
+    <div class="product-card" id="product-${index}">
+      <img src="${prod.img}" alt="${prod.name}">
+      <div class="product-info">
+        <h3>${prod.name}</h3>
+        <p>${prod.desc}</p>
+        <p style="font-size:1.1rem;margin-top:10px;">
+          ${prod.oldPrice ? `<span style="text-decoration: line-through; color:#777;">$${prod.oldPrice}</span>` : ""}
+          <span style="color:#d40000; font-weight:700; margin-left:${prod.oldPrice ? "10px" : "0"};">$${prod.salePrice}</span>
+        </p>
+        <a href="${prod.link}" target="_blank">Buy Now</a>
       </div>
-    `).join("");
+    </div>`).join("");
+}
+
+// Scroll & highlight based on ID from homepage
+function scrollToProductFromURL(){
+  const urlParams = new URLSearchParams(window.location.search);
+  const productId = urlParams.get("productId");
+  if(productId!==null && allProducts.length){
+    const targetIndex = allProducts.findIndex(p=>p.id==productId);
+    if(targetIndex!==-1){
+      const targetProduct = document.getElementById(`product-${targetIndex}`);
+      if(targetProduct){
+        targetProduct.scrollIntoView({behavior:"smooth",block:"center"});
+        targetProduct.classList.add("highlight");
+        setTimeout(()=>targetProduct.classList.remove("highlight"),2000);
+      }
+    }
   }
 }
 
-// Initial Load
-(async () => {
-  allProducts = await loadProducts();
-  displayProducts(homeGrid, allProducts);
-})();
-
-// Highlight product from URL
-const urlParams = new URLSearchParams(window.location.search);
-const productIndex = urlParams.get("product");
-if(productIndex !== null){
-  const targetProduct = document.getElementById(`product-${productIndex}`);
-  if(targetProduct){
-    targetProduct.scrollIntoView({behavior:"smooth", block:"center"});
-    targetProduct.classList.add("highlight");
-    setTimeout(() => targetProduct.classList.remove("highlight"), 2000);
-  }
-}
-
-// Live Search
 document.getElementById("searchBar").addEventListener("keyup", function(){
   const filter = this.value.toLowerCase();
-  const filtered = allProducts.filter(prod => 
+  const filtered = allProducts.filter(prod =>
     prod.name.toLowerCase().includes(filter) || prod.desc.toLowerCase().includes(filter)
   );
-  displayProducts(homeGrid, filtered);
+  displayProducts(filtered);
 });
 
-// Active nav
 const navLinks = document.querySelectorAll("nav ul li a");
-const currentURL = window.location.pathname.split("/").pop();
-navLinks.forEach(link => {
-  const linkPage = link.getAttribute("href");
-  if(linkPage === currentURL || (linkPage === "index.html" && currentURL === "")) link.classList.add("active");
-  else link.classList.remove("active");
+navLinks.forEach(link=>{
+  const currentPage = window.location.pathname.split("/").pop();
+  if(link.getAttribute("href")===currentPage || (currentPage==="" && link.getAttribute("href")==="index.html")){
+    link.classList.add("active");
+  } else { link.classList.remove("active"); }
 });
+
+loadProducts();
 </script>
 
 </body>
