--- a/featured.html
+++ b/featured.html
@@ -6,16 +6,56 @@
 <title>KhanceptDesigns – Featured Products</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 <style>
-body{margin:0;font-family:"Poppins",sans-serif;background:#f0f0f0;color:#222;}
-header{padding:60px 20px;text-align:center;background:linear-gradient(135deg,#111 0%,#222 100%);color:white;}
-header h1{font-size:3.2rem;margin:0;font-weight:800;letter-spacing:1px;}
-header p{margin-top:8px;font-size:1.2rem;opacity:0.85;}
+/* Body & General */
+body {margin:0;font-family:"Poppins",sans-serif;background:#f4f4f4;color:#222;}
+
+/* Header - SAME AS HOME PAGE */
+header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 180px;
+  background: linear-gradient(135deg, #111 0%, #222 100%);
+  color: white;
+  text-align: center;
+  padding: 0 20px;
+}
+header h1 {
+  font-size: 3.2rem;
+  font-weight: 800;
+  margin: 0;
+  letter-spacing: 1px;
+  text-shadow: 1px 1px 4px rgba(0,0,0,0.4);
+}
+header p {
+  margin-top: 8px;
+  font-size: 1.2rem;
+  font-weight: 400;
+  color: #ccc;
+  letter-spacing: 0.5px;
+  opacity: 0.9;
+}
+@media (max-width: 768px) {
+  header { height: 140px; }
+  header h1 { font-size: 2.2rem; }
+  header p { font-size: 1rem; }
+}
+@media (max-width: 480px) {
+  header { height: 120px; }
+  header h1 { font-size: 1.8rem; }
+  header p { font-size: 0.9rem; }
+}
+
+/* Navigation */
 nav{background:#000;padding:15px 0;text-align:center;}
 nav ul{list-style:none;margin:0;padding:0;}
 nav ul li{display:inline-block;margin:0 20px;}
 nav ul li a{color:white;text-decoration:none;font-weight:600;font-size:1.1rem;transition:0.3s;}
 nav ul li a:hover{color:#aaa;}
 nav ul li a.active{color:#1E90FF;font-weight:700;}
+
+/* Container & Product Grid */
 .container{width:90%;max-width:1200px;margin:50px auto;}
 .section-title{font-size:2.4rem;text-align:center;margin-bottom:40px;font-weight:700;}
 .search-container{width:100%;max-width:500px;margin:0 auto 40px auto;}
@@ -52,9 +92,11 @@ footer{text-align:center;padding:25px;margin-top:50px;background:#111;color:whit
 
 <div class="container">
 <h2 class="section-title">Featured Products</h2>
+
 <div class="search-container">
 <input type="text" id="searchBar" placeholder="Search products...">
 </div>
+
 <div class="product-grid" id="homeProductGrid"></div>
 </div>
 
@@ -100,7 +142,6 @@ function displayProducts(products){
     </div>`).join("");
 }
 
-// Scroll & highlight based on ID from homepage
 function scrollToProductFromURL(){
   const urlParams = new URLSearchParams(window.location.search);
   const productId = urlParams.get("productId");
