--- a/admin.html
+++ b/admin.html
@@ -288,6 +288,8 @@ document.getElementById("productForm").addEventListener("submit", async e=>{
 // --- Initial render
 renderTable();
 </script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+<script src="auth.js"></script>
+<script>protectAdminPage();</script>
 </body>
 </html>
