--- a/admin.html
+++ b/admin.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>KhanceptDesigns – Admin Editor</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 
 <style>
 body {
@@ -12,74 +13,29 @@ body {
     margin:0; padding:0;
     background:#f5f5f5; color:#222;
 }
-header { text-align:center; padding:40px 20px; background:#111; color:white; position:relative; }
+header { text-align:center; padding:40px 20px; background:#111; color:white; position: relative; }
 header h1 { margin:0; font-size:2rem; }
 header p { margin-top:5px; opacity:0.8; }
-header button { position:absolute; top:20px; right:20px; padding:8px 14px; background:#111; color:white; border:none; border-radius:6px; cursor:pointer; }
+header button { position: absolute; top:20px; right:20px; padding:8px 14px; background:#111; color:white; border:none; border-radius:6px; cursor:pointer;}
 header button:hover { background:#333; }
 
 .container { max-width:1000px; margin:30px auto; background:white; padding:30px; border-radius:12px; box-shadow:0 5px 20px rgba(0,0,0,0.1); }
 form input, form button { display:block; width:100%; padding:12px 15px; margin:8px 0; border-radius:8px; border:1px solid #ccc; }
 form button { background:#111; color:white; border:none; cursor:pointer; transition:0.3s;}
 form button:hover { background:#333; }
+
 table { width:100%; border-collapse: collapse; margin-top:20px; font-size:0.9rem; }
 table, th, td { border:1px solid #ccc; }
 th, td { padding:8px; text-align:left; }
+
 .edit-btn, .delete-btn, .top-btn { padding:4px 8px; margin-right:5px; border:none; border-radius:6px; cursor:pointer; font-size:0.85rem; }
 .edit-btn { background:#1E90FF; color:white; }
 .delete-btn { background:#d40000; color:white; }
 .top-btn { background:#ffa500; color:white; }
+
 .token-container { display:flex; align-items:center; gap:10px; margin-bottom:15px; }
 .token-container input { flex:1; }
 .token-container button { flex:none; padding:10px; }
-
-/* --- Smaller product cards --- */
-.product-card {
-    width: 150px;
-    background:white;
-    border-radius:12px;
-    overflow:hidden;
-    box-shadow:0 5px 15px rgba(0,0,0,0.1);
-    transition:0.3s;
-    display:flex;
-    flex-direction:column;
-    cursor:pointer;
-    margin-bottom:15px;
-}
-.product-card img {
-    width:100%;
-    height:120px;
-    object-fit:contain;
-    background:#f9f9f9;
-}
-.product-info {
-    padding:8px;
-    display:flex;
-    flex-direction:column;
-    justify-content:flex-end;
-    align-items:center;
-    flex-grow:1;
-    gap:4px;
-}
-.product-info h3 {
-    margin:0;
-    font-size:0.9rem;
-    text-align:center;
-}
-.product-info .price {
-    font-size:1rem;
-    font-weight:700;
-    color:#d40000;
-}
-.product-info a {
-    padding:5px 10px;
-    font-size:0.85rem;
-    background:#000;
-    color:white;
-    text-decoration:none;
-    border-radius:6px;
-}
-.product-info a:hover { background:#333; }
 </style>
 </head>
 <body>
@@ -90,7 +46,7 @@ th, td { padding:8px; text-align:left; }
 <button onclick="logout()">Logout</button>
 </header>
 
-<div class="container">
+<div class="container" id="adminContent" style="display:none;">
 <h2>Add / Edit Product</h2>
 
 <!-- GitHub Token Input -->
@@ -127,31 +83,38 @@ th, td { padding:8px; text-align:left; }
 </table>
 </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 <script>
-// --- ADMIN LOGIN PROTECTION ---
+// --- ADMIN LOGIN ---
 const ADMIN_PASSWORD = "Admin@502";
 const ADMIN_HASH = CryptoJS.SHA256(ADMIN_PASSWORD).toString();
 
 function protectAdminPage(){
     const storedHash = localStorage.getItem("adminHash");
-    if(storedHash === ADMIN_HASH) return; // already logged in
+    if(storedHash === ADMIN_HASH) {
+        document.getElementById("adminContent").style.display = "block";
+        loadToken();
+        renderTable();
+        return;
+    }
+
     const pwd = prompt("Enter admin password:");
-    if(!pwd) return window.location.href = "index.html"; // cancel -> redirect
+    if(!pwd) return window.location.href = "index.html";
+
     const hash = CryptoJS.SHA256(pwd).toString();
     if(hash === ADMIN_HASH){
         localStorage.setItem("adminHash", hash);
         alert("✅ Access granted");
+        document.getElementById("adminContent").style.display = "block";
+        loadToken();
+        renderTable();
     } else {
         alert("❌ Wrong password!");
         window.location.href = "index.html";
     }
 }
 
-// --- LOGOUT ---
-function logout() {
+function logout(){
     localStorage.removeItem("adminHash");
-    alert("✅ Logged out successfully!");
     window.location.href = "index.html";
 }
 
@@ -162,7 +125,18 @@ const FILE_PATH = "products.json";
 const BRANCH = "main";
 let GITHUB_TOKEN = "";
 
-// --- Toggle token visibility
+// --- Auto-fill token
+function loadToken(){
+    GITHUB_TOKEN = localStorage.getItem("githubToken") || "";
+    const tokenInput = document.getElementById("token");
+    if(GITHUB_TOKEN) tokenInput.value = GITHUB_TOKEN;
+
+    tokenInput.addEventListener("change", function() {
+        GITHUB_TOKEN = this.value.trim();
+        localStorage.setItem("githubToken", GITHUB_TOKEN);
+    });
+}
+
 function toggleToken(){
   const t = document.getElementById("token");
   t.type = t.type === "password" ? "text" : "password";
@@ -180,12 +154,14 @@ async function loadProducts(){
 // --- Save products to GitHub
 async function saveProducts(products){
   if(!GITHUB_TOKEN){ alert("❌ GitHub token required!"); return; }
+
   try{
     const fileInfoRes = await fetch(`https://api.github.com/repos/${GITHUB_USERNAME}/${REPO_NAME}/contents/${FILE_PATH}`, {
       headers:{ "Authorization":`token ${GITHUB_TOKEN}`, "Accept":"application/vnd.github+json" }
     });
     if(!fileInfoRes.ok) throw new Error(await fileInfoRes.text());
     const fileInfo = await fileInfoRes.json();
+
     const updateRes = await fetch(`https://api.github.com/repos/${GITHUB_USERNAME}/${REPO_NAME}/contents/${FILE_PATH}`, {
       method:"PUT",
       headers:{ "Authorization":`token ${GITHUB_TOKEN}`, "Content-Type":"application/json", "Accept":"application/vnd.github+json" },
@@ -197,7 +173,6 @@ async function saveProducts(products){
       })
     });
     if(!updateRes.ok) throw new Error(await updateRes.text());
-    localStorage.setItem("productsUpdated", Date.now()); // notify pages
     return await updateRes.json();
   }catch(err){ alert("Error saving products: "+err.message); }
 }
@@ -225,22 +200,23 @@ async function renderTable(){
   });
 }
 
-// --- Move product to top
-async function moveToTop(id) {
-    GITHUB_TOKEN = document.getElementById("token").value.trim();
-    if (!GITHUB_TOKEN) return alert("❌ GitHub Token Missing!");
+// --- Move to Top
+async function moveToTop(id){
+    if(!GITHUB_TOKEN){ alert("❌ GitHub token required!"); return; }
     let products = await loadProducts();
-    const index = products.findIndex(p => Number(p.id) === Number(id));
-    if (index === -1) return alert("Product not found!");
-    const selected = products.splice(index, 1)[0];
+    const index = products.findIndex(p=>p.id===id);
+    if(index===-1) return alert("Product not found!");
+    const selected = products.splice(index,1)[0];
     products.unshift(selected);
     await saveProducts(products);
     renderTable();
+    localStorage.setItem("productsUpdated", Date.now());
     alert("✅ Product moved to the top!");
 }
 
 // --- Add/Edit Product
 async function addProduct(product){
+  if(!GITHUB_TOKEN){ alert("❌ GitHub token required!"); return; }
   let products = await loadProducts();
   if(!product.id) product.id = products.length ? Math.max(...products.map(p=>p.id))+1 : 1;
   const index = products.findIndex(p=>p.id===product.id);
@@ -253,7 +229,7 @@ async function addProduct(product){
 // --- Delete Product
 async function deleteProduct(id){
   if(!confirm("Delete this product?")) return;
-  if(!GITHUB_TOKEN){ GITHUB_TOKEN = prompt("Enter GitHub token:")?.trim(); if(!GITHUB_TOKEN) return alert("❌ Token required!"); }
+  if(!GITHUB_TOKEN){ alert("❌ GitHub token required!"); return; }
   let products = await loadProducts();
   products = products.filter(p=>p.id!==id);
   await saveProducts(products);
@@ -279,8 +255,6 @@ async function fillForm(id){
 // --- Form submit
 document.getElementById("productForm").addEventListener("submit", async e=>{
   e.preventDefault();
-  GITHUB_TOKEN = document.getElementById("token").value.trim();
-  if(!GITHUB_TOKEN) return alert("❌ GitHub token required!");
   const product = {
     id:Number(document.getElementById("productId").value)||null,
     name:document.getElementById("name").value,
@@ -295,11 +269,8 @@ document.getElementById("productForm").addEventListener("submit", async e=>{
   e.target.reset();
 });
 
-// --- PROTECT PAGE ---
+// --- INITIALIZE ---
 protectAdminPage();
-
-// --- Initial render
-renderTable();
 </script>
 
 </body>
